# lysutil

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/config/: json.rs  mod.rs
src/macros/: mod.rs  uwu.rs
src/numerals/: mod.rs
src/pretty/: mod.rs  vec.rs
