[package]
name = "lysutil"
version = "0.1.1"
authors = ["Rax Ixor <raxixor@rax.ee>"]
edition = "2018"
description = "Various utilities created by Lys/Rax for personal use. You may find them helpful."
license = "MIT"
readme = "README.md"
repository = "https://github.com/raxixor/lysutil"
homepage = "https://github.com/raxixor/lysutil"
keywords = ["utilities", "util"]
documentation = "https://docs.rs/lysutil"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
string-builder = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
