[package]
authors = ["Rax Ixor <raxixor@rax.ee>"]
description = "Various utilities created by Lys/Rax for personal use. You may find them helpful."
documentation = "https://docs.rs/lysutil"
edition = "2018"
homepage = "https://github.com/raxixor/lysutil"
keywords = ["utilities", "util"]
license = "MIT"
name = "lysutil"
readme = "README.md"
repository = "https://github.com/raxixor/lysutil"
version = "0.1.1"

[dependencies]
string-builder = "0.2"
